# Integral-Calculator

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: build-windows.yml  test.yml
cpp/: .gitignore  CMakeLists.txt  PARITY.md  README.md
cpp/include/calculator/: ExpressionEngine.hpp  IntegralPreviewWidget.hpp  MainWindow.hpp  MathExtensions.hpp  MathToolsDialog.hpp  NumericalIntegrator.hpp  PlotWidget.hpp  SymbolicEngine.hpp
cpp/src/: ExpressionEngine.cpp  IntegralPreviewWidget.cpp  MainWindow.cpp  MathExtensions.cpp  MathToolsDialog.cpp  NumericalIntegrator.cpp  PlotWidget.cpp  SymbolicEngine.cpp  main.cpp
cpp/tests/: test_core.cpp  test_preview.cpp
python/: Integral_Calculator.py  PACKAGING.md  UPDATE.md  app_gui.py  base_tab.py  build_macos_app.sh  build_windows_app.bat  error_utils.py  export_utils.py  favorites_store.py  formatting.py  history_utils.py  i18n.py  input_suggestions.py  interval_utils.py  language_ui.py  local_source_paths.py  macos_app.spec  main_window.py  math_extensions.py  math_templates.py  math_tools_ui.py  numeric_methods.py  parameter_utils.py  parser_utils.py  plot_utils.py  progress_utils.py  qt_app.py  qt_async.py  qt_dialogs.py  qt_main_window.py  qt_math_keyboard.py  qt_math_tools.py  qt_plot.py  qt_result_workspace.py  recommendation_utils.py  requirements-ci.txt  requirements-windows.txt  result_presenter.py  run_tests.py  (+11 more)
python/calengine/: __init__.py
python/locales/: __init__.py  ar.py  en.py  es.py  fr.py  hi.py  ja.py  ko.py  zh_cn.py  zh_tw.py
python/math_editor/: __init__.py  adapter.py  bridge.py  panel.py  resource_paths.py  syntax.py
python/math_editor/resources/: editor.html  mathlive.min.js.sha256  results.html
python/numpy/: __init__.py
python/qt_tabs/: __init__.py  advanced.py  base.py  basic.py  improper.py
python/scripts/: vendor_mathlive.sh
python/solving/: __init__.py  abc.py
python/solving/assumptions/: ask.py  ask_generated.py  assume.py  cnf.py  facts.py  lra_satask.py  refine.py  satask.py  (+2 more)
python/tests/: test_gui_layer.py  test_interactive_math_tools.py  test_math_editor_bridge.py  test_math_editor_syntax.py  test_math_features.py  test_parser_numeric.py  test_qt_main_window.py  test_qt_math_keyboard.py  test_qt_math_tools.py  test_qt_packaging.py  test_qt_tabs.py  test_recommendation_i18n.py  test_result_presenter.py  test_symbolic_tab2.py  test_theme_utils.py
(+467 files in other folders)
